Enhancements for My Messages as suggested by Jason Files modified - [MyMessages,cx2]

--- a/src/main/webapp/pages/MyMessages/MyMessages.html
+++ b/src/main/webapp/pages/MyMessages/MyMessages.html
@@ -24,24 +24,41 @@
                         <wm-panel iconclass="wi wi-mail" autoclose="outsideClick" title="My Messages" name="panelMyMessages" class="panel-primary">
                             <wm-tabs name="tabsMessages">
                                 <wm-tabpane name="tabpaneInbox" title="Inbox">
-                                    <wm-grid title="" dataset="bind:Variables.svGetUserMessages.dataSet" navigation="Classic" name="gridInbox" filtermode="multicolumn" showrecordcount="true">
-                                        <wm-grid-column binding="sourceType" caption="Source Type" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="sourceTitle" caption="Source Title" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="municipalityName" caption="Municipality" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="postedByFullName" caption="Sent By" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="postedAt" caption="Date Sent" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false">{{row.getProperty('postedAt') | toLocalDateString}}</wm-grid-column>
-                                        <wm-grid-column binding="message" caption="Message" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true"
-                                        readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="municipalityMessage" caption="Internal" type="string" widget-type="checkbox" col-ng-class="{'unRead':row['messageRead']==false}" accessroles="CodeManager,CodeOfficer,CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee"
-                                        edit-widget-type="text" show="true" readonly="false">
-                                            <wm-checkbox scopedatavalue="row['municipalityMessage']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
-                                        </wm-grid-column>
-                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                        <wm-grid-row-action key="updaterow" display-name="" show="bind:!row['messageRead']" class="btn-transparent" iconclass="wi wi-check" title="Mark as Read" action="Variables.svSetMessageReadStatus.invoke();updaterowAction($event)"
-                                        disabled="false"></wm-grid-row-action>
-                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Source" action="deleterowAction($event)" disabled="false"></wm-grid-row-action>
-                                        <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-reply" title="Reply" action="Widgets.dialogReply.open();customRowAction($event)" disabled="false"></wm-grid-row-action>
-                                    </wm-grid>
+                                    <wm-layoutgrid name="layoutgrid5_1">
+                                        <wm-gridrow name="gridrow13_1" padding="1em unset">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn22_1">
+                                                <wm-composite name="composite4" width="30%">
+                                                    <wm-label class="col-md-3 control-label" name="label8_1" caption="Status"></wm-label>
+                                                    <wm-container class="col-md-9" name="container4">
+                                                        <wm-select name="selectStatus" dataset="bind:Variables.stvStatus.dataSet" datafield="Value" displayfield="Status" datavalue="bind:Variables.stvStatus.dataSet[0].Value" on-change="selectStatusChange($event, $scope, newVal, oldVal)"></wm-select>
+                                                    </wm-container>
+                                                </wm-composite>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow14_1" padding="1em unset">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn24_1">
+                                                <wm-grid title="" dataset="bind:Variables.svGetUserMessages.dataSet" navigation="Classic" name="gridInbox" filtermode="multicolumn" showrecordcount="true">
+                                                    <wm-grid-column binding="sourceType" caption="Source Type" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="sourceTitle" caption="Source Title" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="municipalityName" caption="Municipality" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="postedByFullName" caption="Sent By" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="postedAt" caption="Date Sent" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false">{{row.getProperty('postedAt') | toLocalDateString}}</wm-grid-column>
+                                                    <wm-grid-column binding="message" caption="Message" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text"
+                                                    show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="municipalityMessage" caption="Internal" type="string" widget-type="checkbox" col-ng-class="{'unRead':row['messageRead']==false}" accessroles="CodeManager,CodeOfficer,CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee"
+                                                    edit-widget-type="text" show="true" readonly="false">
+                                                        <wm-checkbox scopedatavalue="row['municipalityMessage']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
+                                                    </wm-grid-column>
+                                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                    <wm-grid-row-action key="updaterow" display-name="" show="bind:!row['messageRead']" class="btn-transparent" iconclass="wi wi-check" title="Mark as Read" action="Variables.svSetMessageReadStatus.invoke();updaterowAction($event)"
+                                                    disabled="false"></wm-grid-row-action>
+                                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Source" action="deleterowAction($event)" disabled="false"></wm-grid-row-action>
+                                                    <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-reply" title="Reply" action="Widgets.dialogReply.open();customRowAction($event)"
+                                                    disabled="false"></wm-grid-row-action>
+                                                </wm-grid>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneSent" title="Sent">
                                     <wm-grid title="" dataset="bind:Variables.svGetUserSentMessages.dataSet" navigation="Classic" name="gridSent" filtermode="multicolumn" showrecordcount="true">
