--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -56,8 +56,8 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn26">
                                         <wm-icon iconsize="3em" iconclass="wi wi-building" name="icon8"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn27">
-                                        <wm-label caption="Projects" class="p" fontsize="1.5" fontunit="em" name="label16_1"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn27">
+                                        <wm-label caption="Municipality Projects" class="p" fontsize="1.5" fontunit="em" name="label16_1"></wm-label>
                                         <wm-label caption="bind:Variables.CountOfMunicipalityProjects.dataSet[$i].count" fontsize="3" fontunit="em" class="p" name="label17"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
@@ -73,8 +73,8 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn10" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn11" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Contractors" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn11" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Municipality Contractors" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.VendorsCountForMunicipalities.dataSet[$i].vendorsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
